Fix progress bar spacing

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -92,6 +92,7 @@ $grey-dark: hsl(223.33, 32.14%, 32.94%);
 
 .progress-bar {
   margin-right: 20px;
+  margin-top: 23px;
   display: flex;
 }
 
